--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "buefy": "^0.8.5",
     "core-js": "^2.6.5",
     "jquery": "^3.4.1",
+    "node-sass": "^4.12.0",
     "popper.js": "^1.15.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
@@ -26,7 +28,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "prettier": "^1.18.2",
     "sass": "^1.18.0",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^7.3.1",
     "vue-template-compiler": "^2.6.10"
   }
 }
