--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "bootstrap": "^4.3.1",
     "buefy": "^0.8.5",
     "core-js": "^2.6.5",
+    "google-maps": "^3.3.0",
     "jquery": "^3.4.1",
+    "luxon": "^1.21.2",
     "node-sass": "^4.12.0",
     "popper.js": "^1.15.0",
     "vue": "^2.6.10",
+    "vue-datetime": "^1.0.0-beta.11",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
@@ -26,9 +29,11 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.0.0",
+    "html-webpack-plugin": "^4.0.0-beta.11",
     "prettier": "^1.18.2",
     "sass": "^1.18.0",
     "sass-loader": "^7.3.1",
+    "vue-plugin-load-script": "^1.2.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
