--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js --harmony_proxies"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +14,8 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.7.8"
+    "mongoose": "^5.7.8",
+    "mongoose-schema-extend": "^0.2.2"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
