--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-datetime": "^1.0.0-beta.11",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
