--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "popper.js": "^1.15.0",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
+    "vue-breakpoints": "^1.1.0",
     "vue-datetime": "^1.0.0-beta.11",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
