--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "types": "lib/index",
   "scripts": {
+    "seed": "node seed.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node seed.js && node server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +17,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.8"
+    "mongoose": "^5.7.8",
+    "mongoose-seed": "^0.6.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
