--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "core-js": "^2.6.5",
     "google-maps": "^3.3.0",
     "jquery": "^3.4.1",
-    "luxon": "^1.21.2",
+    "luxon": "^1.22.0",
     "node-sass": "^4.12.0",
     "popper.js": "^1.15.0",
     "react-device-detect": "^1.11.14",
@@ -23,7 +23,8 @@
     "vue-breakpoints": "^1.1.0",
     "vue-datetime": "^1.0.0-beta.11",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "weekstart": "^1.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
