--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose-seed": "^0.6.0",
     "node-sass": "^4.12.0",
     "popper.js": "^1.15.0",
+    "qrcode": "^1.4.4",
     "react-device-detect": "^1.11.14",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
