--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "cors": "^2.8.5",
     "google-maps": "^3.3.0",
     "jquery": "^3.4.1",
+    "jsonwebtoken": "^8.5.1",
     "luxon": "^1.22.0",
+    "mongoose": "^5.9.4",
+    "mongoose-seed": "^0.6.0",
     "node-sass": "^4.12.0",
     "popper.js": "^1.15.0",
     "qrcode": "^1.4.4",
