--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose-seed": "^0.6.0",
     "node-sass": "^4.12.0",
     "popper.js": "^1.15.0",
+    "qr-code-scanner": "^1.0.7",
     "qrcode": "^1.4.4",
     "react-device-detect": "^1.11.14",
     "vue": "^2.6.10",
