--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue-axios": "^2.1.5",
     "vue-breakpoints": "^1.1.0",
     "vue-datetime": "^1.0.0-beta.11",
+    "vue-observe-visibility": "^0.4.6",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2",
     "weekstart": "^1.0.1"
