Added ICountUp to animate counting up of attendance history value

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "buefy": "^0.8.5",
     "core-js": "^2.6.5",
     "cors": "^2.8.5",
+    "countup.js": "^2.0.5",
     "google-maps": "^3.3.0",
     "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
@@ -27,6 +28,7 @@
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-breakpoints": "^1.1.0",
+    "vue-countup-v2": "^4.0.0",
     "vue-datetime": "^1.0.0-beta.11",
     "vue-observe-visibility": "^0.4.6",
     "vue-router": "^3.1.3",
