--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "buefy": "^0.8.5",
     "core-js": "^2.6.5",
     "cors": "^2.8.5",
-    "express-fileupload": "^1.1.7-alpha.3",
+    "formidable": "^1.2.2",
     "google-maps": "^3.3.0",
     "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
