videojs install, instructor video preview window, basic poll creation UI

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "qr-code-scanner": "^1.0.7",
     "qrcode": "^1.4.4",
     "react-device-detect": "^1.11.14",
+    "video.js": "^7.7.6",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-breakpoints": "^1.1.0",
