--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "buefy": "^0.8.5",
+    "chart.js": "^2.9.3",
     "core-js": "^2.6.5",
     "cors": "^2.8.5",
     "countup.js": "^2.0.5",
@@ -28,6 +29,7 @@
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-breakpoints": "^1.1.0",
+    "vue-chartjs": "^3.5.0",
     "vue-countup-v2": "^4.0.0",
     "vue-datetime": "^1.0.0-beta.11",
     "vue-observe-visibility": "^0.4.6",
