--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "buefy": "^0.8.5",
     "core-js": "^2.6.5",
     "cors": "^2.8.5",
+    "flatpickr": "^4.6.3",
     "formidable": "^1.2.2",
     "google-maps": "^3.3.0",
     "jquery": "^3.4.1",
@@ -29,7 +30,6 @@
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-breakpoints": "^1.1.0",
-    "vue-datetime": "^1.0.0-beta.11",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2",
     "weekstart": "^1.0.1"
