--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
     "luxon": "^1.22.0",
+    "moment": "^2.25.3",
     "mongoose": "^5.9.4",
     "mongoose-seed": "^0.6.0",
     "node-sass": "^4.12.0",
@@ -33,6 +34,7 @@
     "vue-chartjs": "^3.5.0",
     "vue-countup-v2": "^4.0.0",
     "vue-datetime": "^1.0.0-beta.11",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2",
     "weekstart": "^1.0.1"
