--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "proxy": {
+    "/": {
+      "target": "https://localhost:8081"
+    }
+  },
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
