--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
     "luxon": "^1.22.0",
+    "mime-types": "^2.1.27",
     "moment": "^2.25.3",
     "mongoose": "^5.9.4",
     "mongoose-seed": "^0.6.0",
