--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "buefy": "^0.8.5",
+    "cas-authentication": "0.0.8",
     "chart.js": "^2.9.3",
     "core-js": "^2.6.5",
     "cors": "^2.8.5",
