--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^4.3.1",
     "buefy": "^0.8.5",
     "chart.js": "^2.9.3",
+    "cookie-session": "^1.4.0",
     "core-js": "^2.6.5",
     "cors": "^2.8.5",
     "flatpickr": "^4.6.3",
