--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "bootstrap": "^4.3.1",
     "buefy": "^0.8.5",
     "chart.js": "^2.9.3",
