--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "bcrypt": "^4.0.1",
     "bootstrap": "^4.3.1",
     "buefy": "^0.8.5",
     "chart.js": "^2.9.3",
