--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build && mkdir dist/dist && touch dist/dist/build.js",
     "lint": "vue-cli-service lint",
     "start": "npm run start --prefix server"
   },
@@ -20,6 +20,7 @@
     "bootstrap": "^4.3.1",
     "buefy": "^0.8.5",
     "chart.js": "^2.9.3",
+    "connect-history-api-fallback": "^1.6.0",
     "core-js": "^2.6.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
