login and loginStatus using cookies for session info

--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "bootstrap": "^4.3.1",
     "buefy": "^0.8.5",
     "chart.js": "^2.9.3",
-    "cookie-session": "^1.4.0",
+    "cookie-parser": "^1.4.5",
     "core-js": "^2.6.5",
     "cors": "^2.8.5",
+    "express-session": "^1.17.1",
     "flatpickr": "^4.6.3",
     "formidable": "^1.2.2",
     "google-maps": "^3.3.0",
