--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
     "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.8",
-    "mongoose-seed": "^0.6.0"
+    "mongoose-seed": "^0.6.0",
+    "uuid": "^8.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
