--- a/server/package.json
+++ b/server/package.json
@@ -16,14 +16,18 @@
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "connect-history-api-fallback": "^1.6.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "find-config": "^1.0.0",
     "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.8",
     "mongoose-seed": "^0.6.0",
+    "passport": "^0.4.1",
+    "passport-cas": "^0.1.1",
     "serve-static": "^1.14.1"
   },
   "devDependencies": {
