--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.8",
     "mongoose-seed": "^0.6.0",
+    "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-cas": "^0.1.1",
     "serve-static": "^1.14.1"
