--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     }
   },
   "dependencies": {
+    "@google-cloud/storage": "^5.1.0",
     "axios": "^0.19.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "bcrypt": "^4.0.1",
