--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^5.1.0",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "connect-history-api-fallback": "^1.6.0",
