--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build && mkdir dist/dist && touch dist/dist/build.js",
     "lint": "vue-cli-service lint",
-    "start": "npm run start --prefix server"
+    "start": "npm run start --prefix server",
+    "test": "cd server && npm run seed && cd ../ && cypress open"
   },
   "proxy": {
     "/": {
@@ -15,63 +16,64 @@
   },
   "dependencies": {
     "@chenfengyuan/vue-qrcode": "^1.0.2",
-    "@google-cloud/storage": "^5.1.0",
-    "axios": "^0.19.0",
+    "@google-cloud/storage": "^5.1.1",
+    "axios": "^0.19.2",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "bcrypt": "^4.0.1",
-    "bootstrap": "^4.3.1",
-    "buefy": "^0.8.5",
+    "bootstrap": "^4.5.0",
+    "buefy": "^0.8.20",
     "chart.js": "^2.9.3",
     "connect-history-api-fallback": "^1.6.0",
     "cookie-parser": "^1.4.5",
-    "core-js": "^2.6.5",
+    "core-js": "^2.6.11",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "flatpickr": "^4.6.3",
     "formidable": "^1.2.2",
     "google-maps": "^3.3.0",
-    "jquery": "^3.5.0",
+    "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
-    "luxon": "^1.22.0",
-    "moment": "^2.25.3",
-    "mongoose": "^5.9.4",
+    "luxon": "^1.24.1",
+    "moment": "^2.27.0",
+    "mongoose": "^5.9.19",
     "mongoose-seed": "^0.6.0",
     "multer": "^1.4.2",
-    "node-sass": "^4.12.0",
-    "nodemailer": "^6.4.6",
+    "node-sass": "^4.14.1",
+    "nodemailer": "^6.4.10",
     "passport": "^0.4.1",
     "passport-cas": "^0.1.1",
-    "popper.js": "^1.15.0",
+    "popper.js": "^1.16.1",
     "qr-code-scanner": "^1.0.7",
     "qrcode": "^1.4.4",
-    "react-device-detect": "^1.11.14",
-    "video.js": "^7.7.6",
-    "vue": "^2.6.10",
+    "react-device-detect": "^1.13.1",
+    "video.js": "^7.8.2",
+    "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-breakpoints": "^1.1.0",
     "vue-chartjs": "^3.5.0",
     "vue-countup-v2": "^4.0.0",
     "vue-moment": "^4.1.0",
     "vue-qrcode-reader": "^2.3.0",
-    "vue-router": "^3.1.3",
-    "vuex": "^3.1.2",
+    "vue-router": "^3.3.4",
+    "vuex": "^3.4.0",
     "weekstart": "^1.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.11.0",
-    "@vue/cli-plugin-eslint": "^3.11.0",
-    "@vue/cli-service": "^3.11.0",
-    "@vue/eslint-config-prettier": "^5.0.0",
-    "babel-eslint": "^10.0.1",
+    "@vue/cli-plugin-babel": "^3.12.1",
+    "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-service": "^3.12.1",
+    "@vue/eslint-config-prettier": "^5.1.0",
+    "babel-eslint": "^10.1.0",
+    "cypress": "^4.8.0",
     "eslint": "^5.16.0",
-    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^5.0.0",
-    "html-webpack-plugin": "^4.0.0-beta.11",
-    "prettier": "^1.18.2",
-    "sass": "^1.18.0",
+    "html-webpack-plugin": "^4.3.0",
+    "prettier": "^1.19.1",
+    "sass": "^1.26.8",
     "sass-loader": "^7.3.1",
     "vue-plugin-load-script": "^1.2.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.11"
   }
 }
