--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build && mkdir dist/dist && touch dist/dist/build.js",
     "lint": "vue-cli-service lint",
     "start": "npm run start --prefix server",
-    "test": "cypress run"
+    "test": "cypress run",
+    "test:ui": "cypress open"
   },
   "proxy": {
     "/": {
