--- a/server/package.json
+++ b/server/package.json
@@ -30,7 +30,8 @@
     "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-cas": "^0.1.1",
-    "serve-static": "^1.14.1"
+    "serve-static": "^1.14.1",
+    "throng": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
