--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "vue-cli-service lint",
     "start": "npm run start --prefix server",
     "test": "cypress run",
-    "test:ui": "cypress open"
+    "test:ui": "cypress open",
+    "postinstall": "npm install --prefix ./server"
   },
   "proxy": {
     "/": {
