--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "nodemailer": "^6.4.11",
     "passport": "^0.4.1",
     "passport-cas": "^0.1.1",
+    "pickerjs": "^1.2.1",
     "popper.js": "^1.16.1",
     "qr-code-scanner": "^1.0.7",
     "qrcode": "^1.4.4",
