--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "qrcode": "^1.4.4",
     "react-device-detect": "^1.13.1",
     "video.js": "^7.8.4",
+    "videojs-youtube": "^2.6.1",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-breakpoints": "^1.1.0",
@@ -61,7 +62,8 @@
     "vue-qrcode-reader": "^2.3.12",
     "vue-router": "^3.4.3",
     "vuex": "^3.5.1",
-    "weekstart": "^1.0.1"
+    "weekstart": "^1.0.1",
+    "youtube-url": "^0.5.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.1",
