--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "vue-router": "^3.4.3",
     "vuex": "^3.5.1",
     "weekstart": "^1.0.1",
+    "youtube-player": "^5.5.2",
     "youtube-url": "^0.5.0"
   },
   "devDependencies": {
