--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "vue-qrcode-reader": "^2.3.12",
     "vue-router": "^3.4.3",
     "vuex": "^3.5.1",
+    "webex": "^1.93.0",
     "weekstart": "^1.0.1",
     "youtube-player": "^5.5.2",
     "youtube-url": "^0.5.0"
