--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "mongoose": "^5.10.0",
     "mongoose-seed": "^0.6.0",
     "multer": "^1.4.2",
+    "node": "^14.11.0",
     "node-sass": "^4.14.1",
     "nodemailer": "^6.4.11",
     "passport": "^0.4.1",
