--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@chenfengyuan/vue-qrcode": "^1.0.2",
     "@google-cloud/storage": "^5.2.0",
+    "aws-sdk": "^2.771.0",
     "axios": "^0.19.2",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "bcrypt": "^5.0.0",
