--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@chenfengyuan/vue-qrcode": "^1.0.2",
+    "@fullcalendar/timegrid": "^5.4.0",
+    "@fullcalendar/vue": "^5.4.0",
     "@google-cloud/storage": "^5.2.0",
     "aws-sdk": "^2.771.0",
     "axios": "^0.19.2",
