--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "qrcode-reader": "^1.0.4",
     "react-device-detect": "^1.13.1",
     "register-service-worker": "^1.7.1",
+    "tui-calendar": "^1.12.14",
     "video.js": "^7.8.4",
     "videojs-youtube": "^2.6.1",
     "vue": "^2.6.11",
