--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "vue-moment": "^4.1.0",
     "vue-qrcode-reader": "^2.3.12",
     "vue-router": "^3.4.3",
+    "vue-simple-accordion": "^0.1.0",
     "vuex": "^3.5.1",
     "weekstart": "^1.0.1",
     "youtube-url": "^0.5.0"
