--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/storage": "^5.2.0",
+    "aws-sdk": "^2.797.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "connect-history-api-fallback": "^1.6.0",
@@ -29,8 +30,10 @@
     "mongoose-seed": "^0.6.0",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
+    "qrcode-reader": "^1.0.4",
     "serve-static": "^1.14.1",
-    "throng": "^4.0.0"
+    "throng": "^4.0.0",
+    "vue-simple-accordion": "^0.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
