--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "find-config": "^1.0.0",
     "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
+    "mongod": "^2.0.0",
     "mongoose": "^5.10.0",
     "mongoose-seed": "^0.6.0",
     "multer": "^1.4.2",
